Issue #2840324 by Caffeinated: Columns - Two Uneven Column 1/4 - 3/4 is wrong

--- a/css/bootstrap-paragraphs.css
+++ b/css/bootstrap-paragraphs.css
@@ -658,7 +658,7 @@
 @media (min-width: 768px) {
   .paragraph--type--columns-two-uneven.paragraph--style--25-75 .paragraph--type--columns__2col:nth-of-type(1) {
     float: left;
-    width: 33.33333333%;
+    width: 25%;
   }
 }
 .paragraph--type--columns-two-uneven.paragraph--style--25-75 .paragraph--type--columns__2col:nth-of-type(2) {
@@ -670,7 +670,7 @@
 @media (min-width: 768px) {
   .paragraph--type--columns-two-uneven.paragraph--style--25-75 .paragraph--type--columns__2col:nth-of-type(2) {
     float: left;
-    width: 66.66666667%;
+    width: 75%;
   }
 }
 .paragraph--type--columns-two-uneven.paragraph--style--33-66 .paragraph--type--columns__2col:nth-of-type(1) {
